# Parallel-and-Distributed-Algorithms

./: formule.txt
laboratoare/lab03/: merge  merge copy.c  merge.c  oets  oets.c  output  parallel_binary_search  parallel_binary_search - Copy (2).c  parallel_binary_search - Copy (3).c  parallel_binary_search - Copy (4).c  parallel_binary_search - Copy.c  parallel_binary_search.c  shear  shear.c
laboratoare/lab04/: README
laboratoare/lab04/src/: Ex1.java
laboratoare/lab04/src/bug2/: MyThread.java
laboratoare/lab04/src/bug3/: MyThread.java
laboratoare/lab04/src/bug4/: Main.java
laboratoare/lab04/src/bug5/: Main.java  MyThreadA.java  MyThreadB.java
laboratoare/lab04/src/bug6/: Main.java  MyThread.java
laboratoare/lab04/src/doubleVectorElements/: Main.java  MyThread.java
laboratoare/lab04/src/shortestPathsFloyd_Warshall/: Main.java  MyThread.java
laboratoare/lab05/src/barber/: Barber.java  Client.java  Main.java
laboratoare/lab05/src/multipleProducersMultipleConsumers/: Buffer.java  Main.java
laboratoare/lab05/src/multipleProducersMultipleConsumersNBuffer/: Buffer.java
teme/tema 1 backup/sol - Copy/: genetic_algorithm.c  genetic_algorithm.h  tema1  tema1_par
teme/tema 1 backup/sol - Copy (4)/: genetic_algorithm.c  genetic_algorithm.h  output_secv.txt  tema1_par  tema1_par.c
teme/tema1/: CMakeLists.txt
teme/tema1/sol/: Makefile  README  genetic_algorithm.c  genetic_algorithm.h  output_par.txt  tema1.c  tema1_par  tema1_par.c
teme/tema2/skel/: Dictionary.java  Document.java  MapTask.java  ReduceTask.java  Tema2.java  Worker.java
(+16 files in other folders)
